# fscode

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
.github/workflows/: publish.yml
src/fscode/: fscode.py  plan.py
tests/: test_plan.py
