[project]
    name            = "fscode"
    version         = "0.2.0"
    description     = "Filename Studio Code"
    readme          = "README.md"
    authors         = [{ name = "Bit0r", email = "nie_wang@outlook.com" }]
    requires-python = ">=3.13"
    dependencies    = ["fire", "plumbum", "rich", "more-itertools", "networkx"]

    [project.scripts]
        fscode = "fscode.fscode:main"

[build-system]
    requires      = ["uv_build>=0.8.16,<0.9.0"]
    build-backend = "uv_build"
